<resources>
    <string name="app_name">BeercadeApp</string>
    <string name="about_us">About Us</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="highscores">High Scores</string>

    <string name="add_high_score">Add High Score</string>
    <string name="initials">Initials</string>
    <string name="game_title">Game Title</string>
    <string name="your_name">Your Name</string>
    <string name="high_score">Your High Score</string>
    <string name="take_picture_of_high_score">Take a Picture of your High Score!</string>
    <string name="submit_high_score">Submit High Score</string>
    <string name="camera">Camera</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigate">Navigate</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="connection_error">Please connect to the internet and try again.</string>

    <string name="age_restrictions">
        What are your age restrictions?
        \n\nBeercade is a BAR with arcade games.
        \nOur establishment is 21 and over. We do allow minors accompanied by a parent until 7 pm everyday. Please remember that this is an adult environment, which should be considered before bringing children.
    </string>
    <string name="friends_21">
        My friends are 21, can I come with them?
        \n\nSorry, not without your parent.
    </string>
    <string name="planning_a_party">
        Planning a Party?
        \n\nGet in Touch!
        \nhttp://www.thebeercade.com/contact-us/
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
