<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.beercadeapp.AddHighScoreFragment"
    android:padding="@dimen/padding">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/take_picture_of_high_score"
        android:layout_weight="0" />
    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/game_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/game_title"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext"
        android:lines="1"/>
    <EditText
        android:id="@+id/initials_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/initials"
        android:layout_weight="0"
        android:inputType="textCapCharacters"
        android:imeOptions="actionNext"
        android:lines="1" />
    <EditText
        android:id="@+id/player_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:layout_weight="0"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:lines="1"/>
    <EditText
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/high_score"
        android:layout_weight="0"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:lines="1"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding">
        <Button
            android:id="@+id/take_picture_button"
            android:text="@string/camera"
            style="@style/BrandedButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"/>
        <Button
            android:id="@+id/send_email_button"
            android:text="@string/submit_high_score"
            style="@style/BrandedButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"/>
    </LinearLayout>

</LinearLayout>
